--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,89 @@ body {
   word-spacing: 3px;
 }
 
+.app {
+  position: relative;
+}
+.hero {
+  position: relative;
+}
+
 .hero-img {
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  width: 400px;
+  overflow: hidden;
+}
+.shutter {
+  position: absolute;
+  z-index: 100;
+  font-family: "Cosi Azure", sans-serif;
+  font-size: 8rem;
+}
+
+.shutter-left {
+  top: 0;
+  left: 7%;
+}
+
+.shutter-right {
+  bottom: 0;
+  right: 0;
+}
+
+.noise {
+  background-image: url("./assets/images/noise.gif");
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -9999;
+  opacity: 0.07;
+}
+
+.circle-left,
+.circle-right {
+  height: 800px;
+  width: 800px;
+  border: 1px solid var(--color-light);
+  border-radius: 50%;
+  opacity: 0.2;
+  position: fixed;
+  z-index: -9998;
+  animation: spin 90s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.circle-left {
+  top: -40%;
+  left: -20%;
+}
+.circle-right {
+  bottom: -40%;
+  right: -20%;
+}
+
+.link-item {
+  position: relative;
+}
+.link-item::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 1px;
+  bottom: 0;
+  left: 50%;
+  bottom: -2px;
+  background-color: var(--color-light);
+  transform: translate(-50%);
+  transition: 0.3s;
+}
+.link-item:hover:after {
+  width: 100%;
 }
