projects and skill section done

--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,34 @@ body {
   font-size: 8rem;
   line-height: 1;
 }
+.skill-item {
+  position: relative;
+}
+.skill-item::after,
+.skill-item::before {
+  content: "";
+  height: 1px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: var(--color-light);
+}
+
+.skill-item::before {
+  width: 100%;
+  opacity: 0.2;
+}
+.skill-item::after {
+  width: 0;
+  background-color: #22d3ee;
+  transition: 0.5s;
+}
+.skill-item:hover::after {
+  width: 100%;
+}
+.skill-number {
+  font-size: 4rem;
+}
+.skill-name {
+  font-size: 2rem;
+}
