--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@
   --color-dark: #050505;
   --color-light: #f7f7f7;
 }
+*,
+*::after,
+*::before {
+  cursor: none;
+}
 
 html,
 body {
@@ -160,4 +165,38 @@ body {
 input[type="submit"] {
   letter-spacing: inherit;
   word-spacing: inherit;
+}
+
+.inner-cursor {
+  position: fixed;
+  left: 10px;
+  z-index: 99999;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: var(--color-light);
+  transform: translate(-50%, -50%);
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transition: width 0.5s, height 0.5s;
+}
+
+.inner-cursor.grow {
+  width: 20px;
+  height: 20px;
+  transition: width 0.5s, height 0.5s;
+}
+
+.outer-cursor {
+  position: fixed;
+  left: 10px;
+  z-index: 99999;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid var(--color-light);
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transition: 0.1s;
 }
